more progress in the French translation

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-12 08:17+0300\n"
-"PO-Revision-Date: 2008-05-21 19:32+0200\n"
+"PO-Revision-Date: 2008-06-07 08:09+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2576,24 +2576,24 @@ msgstr "lien symbolique vers %s"
 
 #: scripts/Dpkg/Source/Patch.pm:434
 msgid "block device"
-msgstr ""
+msgstr "périphérique bloc"
 
 #: scripts/Dpkg/Source/Patch.pm:435
 msgid "character device"
-msgstr ""
+msgstr "périphérique caractère"
 
 #: scripts/Dpkg/Source/Patch.pm:436
 msgid "named pipe"
-msgstr ""
+msgstr "tube nommé"
 
 #: scripts/Dpkg/Source/Patch.pm:437
 msgid "named socket"
-msgstr ""
+msgstr "« socket » nommé"
 
 #: scripts/Dpkg/Source/Package.pm:124
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s is not the name of a file"
-msgstr "%s n'est pas un fichier normal"
+msgstr "%s n'est pas un nom de fichier"
 
 #: scripts/Dpkg/Source/Package.pm:147
 #, perl-format
@@ -2603,21 +2603,21 @@ msgstr "un champ de contrôle vital manque, %s"
 #: scripts/Dpkg/Source/Package.pm:173
 #, perl-format
 msgid "source package format `%s' is not supported (Perl module %s is required)"
-msgstr ""
+msgstr "le format de paquet source « %s » n'est pas géré (le module Perl %s est requis)"
 
 #: scripts/Dpkg/Source/Package.pm:177
-#, fuzzy, perl-format
+#, perl-format
 msgid "invalid Format field `%s'"
-msgstr "champ source invalide dans %s"
+msgstr "champ Format « %s » non valable"
 
 #: scripts/Dpkg/Source/Package.pm:203
-#, fuzzy, perl-format
+#, perl-format
 msgid "file `%s' listed twice in Files field"
-msgstr "pas de tar amont dans le champ Files"
+msgstr "le fichier « %s » est mentionné deux fois dans le champ Files"
 
 #: scripts/Dpkg/Source/Package.pm:232
 msgid "source and version are required to compute the source basename"
-msgstr ""
+msgstr "la source et la version sont indispensables pour calculer le nom de base de la source"
 
 #: scripts/Dpkg/Source/Package.pm:278
 #, perl-format
@@ -2630,9 +2630,9 @@ msgid "could not verify signature on %s since gpg isn't installed"
 msgstr "impossible de vérifier la signature sur %s, gpg n'est pas installé"
 
 #: scripts/Dpkg/Source/Package.pm:291
-#, fuzzy, perl-format
+#, perl-format
 msgid "%s is not a valid option for %s"
-msgstr "%s n'est pas un fichier normal"
+msgstr "%s n'est pas une option valable pour %s"
 
 #: scripts/Dpkg/Source/Package.pm:335
 #, perl-format
@@ -2666,14 +2666,13 @@ msgstr "gestion des sources avec -s%s non autorisée avec -x"
 
 #: scripts/Dpkg/Source/Package/V1.pm:83
 #: scripts/Dpkg/Source/Package/V3/native.pm:49
-#, fuzzy
 msgid "multiple tarfiles in v1.0 source package"
-msgstr "plusieurs fichiers tar dans un paquet natif"
+msgstr "plusieurs fichiers tar dans un paquet source v1.0"
 
 #: scripts/Dpkg/Source/Package/V1.pm:88 scripts/Dpkg/Source/Package/V2.pm:104
-#, fuzzy, perl-format
+#, perl-format
 msgid "unrecognized file for a %s source package: %s"
-msgstr "type de fichier non reconnu pour %s"
+msgstr "type de fichier non reconnu pour un fichier source %s : %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:93
 #: scripts/Dpkg/Source/Package/V3/native.pm:56
@@ -2694,9 +2693,9 @@ msgstr "impossible de modifier %s en %s"
 #: scripts/Dpkg/Source/Package/V3/bzr.pm:192
 #: scripts/Dpkg/Source/Package/V3/native.pm:59
 #: scripts/Dpkg/Source/Package/V3/git.pm:256
-#, fuzzy, perl-format
+#, perl-format
 msgid "unpacking %s"
-msgstr "%s : extraction de %s"
+msgstr "extraction de %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:120
 msgid "unable to keep orig directory (already exists)"
@@ -2714,21 +2713,19 @@ msgstr "impossible de modifier le fichier sauvegardé %s en %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:140 scripts/Dpkg/Source/Package/V2.pm:183
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:146
-#, fuzzy, perl-format
+#, perl-format
 msgid "applying %s"
-msgstr "%s : mise en place de %s"
+msgstr "mise en place de %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:152
-#, fuzzy
 msgid "only supports gzip compression"
-msgstr "%s n'est pas une compression gérée"
+msgstr "ne gère que la compression gzip"
 
 #: scripts/Dpkg/Source/Package/V1.pm:163
-#, fuzzy
 msgid ""
 "-b takes at most a directory and an orig source argument (with v1.0 source "
 "package)"
-msgstr "il faut au plus un paramètre répertoire et un paramètre source avec -b"
+msgstr "il faut au plus un paramètre répertoire et un paramètre source d'origine avec -b (pour les paquets source v1.0)"
 
 #: scripts/Dpkg/Source/Package/V1.pm:169
 #, perl-format
@@ -2741,9 +2738,9 @@ msgid "packed orig `%s' exists but is not a plain file"
 msgstr "l'orig compressé %s existe mais ce n'est pas un simple fichier"
 
 #: scripts/Dpkg/Source/Package/V1.pm:196
-#, fuzzy, perl-format
+#, perl-format
 msgid "cannot stat orig argument %s"
-msgstr "« stat » du paramètre source %s impossible : %s"
+msgstr "« stat » du paramètre origine %s impossible"
 
 #: scripts/Dpkg/Source/Package/V1.pm:202
 #, perl-format
@@ -2825,9 +2822,9 @@ msgid "unable to change permission of `%s'"
 msgstr "impossible de modifier les permissions de %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:301 scripts/Dpkg/Source/Package/V2.pm:257
-#, fuzzy, perl-format
+#, perl-format
 msgid "building %s using existing %s"
-msgstr "%s : construction de %s à partir de %s"
+msgstr "construction de %s à partir de %s"
 
 #: scripts/Dpkg/Source/Package/V1.pm:310
 #, perl-format
@@ -2849,22 +2846,22 @@ msgid "%s: unrepresentable changes to source"
 msgstr "%s : modifications non représentables des sources"
 
 #: scripts/Dpkg/Source/Package/V2.pm:94
-#, fuzzy, perl-format
+#, perl-format
 msgid "duplicate files in %s source package: %s.*"
-msgstr "entrée en double dans le fichier des fichiers pour le paquet %s (ligne %d) "
+msgstr "fichiers mentionnés deux fois dans le paquet source %s : %s.*"
 
 #: scripts/Dpkg/Source/Package/V2.pm:110
 msgid "missing orig.tar or debian.tar file in v2.0 source package"
-msgstr ""
+msgstr "fichier orig.tar ou debian.tar manquant dans un paquet source v2.0"
 
 #: scripts/Dpkg/Source/Package/V2.pm:125
 #, perl-format
 msgid "required removal of `%s' installed by original tarball"
-msgstr ""
+msgstr "suppression indispensable de « %s » installé par l'archive tar originale"
 
 #: scripts/Dpkg/Source/Package/V2.pm:198 scripts/Dpkg/Source/Package/V2.pm:255
 msgid "no orig.tar file found"
-msgstr ""
+msgstr "par de fichier orig.tar trouvé"
 
 #: scripts/Dpkg/Source/Package/V2.pm:216
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:194
@@ -2872,7 +2869,7 @@ msgstr ""
 msgid ""
 "patches have not been applied, applying them now (use --no-preparation to "
 "override)"
-msgstr ""
+msgstr "les rustines n'ont pas été appliquées, elles vont l'être maintenant (utilisez --no-preparation pour sauter cette étape)"
 
 #: scripts/Dpkg/Source/Package/V2.pm:226
 #: scripts/Dpkg/Source/Package/V3/bzr.pm:97
@@ -2880,24 +2877,23 @@ msgstr ""
 #: scripts/Dpkg/Source/Package/V3/git.pm:125
 #, perl-format
 msgid "-b takes only one parameter with format `%s'"
-msgstr ""
+msgstr "-b n'utilise qu'un paramètre avec le format « %s »"
 
 #: scripts/Dpkg/Source/Package/V2.pm:277
-#, fuzzy
 msgid "copy of the debian directory"
-msgstr "pas un répertoire"
+msgstr "copie du répertoire debian"
 
 #: scripts/Dpkg/Source/Package/V2.pm:286
-#, fuzzy, perl-format
+#, perl-format
 msgid "can't read %s"
-msgstr "impossible de lire %s :"
+msgstr "impossible de lire %s"
 
 #: scripts/Dpkg/Source/Package/V2.pm:305
 #, perl-format
 msgid ""
 "add %s in debian/source/include-binaries if you want to store the modified "
 "binary in the debian tarball"
-msgstr ""
+msgstr "Ajoutez %s dans debian/source/include-binaries si vous souhaitez conserver le binaire modifié dans le ficher tar debian"
 
 #: scripts/Dpkg/Source/Package/V2.pm:319
 #, fuzzy, perl-format
