--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-07  Christian perrier  <bubulle@debian.org>
+
+	* fr.po: 437t13f21u
+
 2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
 
 	* pl.po: Updated to 471t.
