Completed French translation

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,6 +1,6 @@
 2008-06-07  Christian perrier  <bubulle@debian.org>
 
-	* fr.po: 464t2f5u
+	* fr.po: Updated to 471t
 
 2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
 
