--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-12 08:17+0300\n"
-"PO-Revision-Date: 2008-06-07 14:45+0200\n"
+"PO-Revision-Date: 2008-06-07 17:09+0200\n"
 "Last-Translator: Christian Perrier <bubulle@debian.org>\n"
 "Language-Team: French <debian-l10n-french@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -3047,7 +3047,7 @@ msgstr "état de sortie non nul de git ls-files"
 #: scripts/Dpkg/Source/Package/V3/git.pm:270
 #, perl-format
 msgid "executable bit set on %s; clearing"
-msgstr ""
+msgstr "bit exécutable placé sur %s, suppression"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:281
 #, perl-format
@@ -3056,34 +3056,34 @@ msgstr "impossible de supprimer %s"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:307
 msgid "modifying .git/config to comment out some settings"
-msgstr ""
+msgstr "modification de .git/config pour activer certains réglages"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
-#, fuzzy, perl-format
+#, perl-format
 msgid "unable to append to %s"
-msgstr "impossible d'ouvrir le répertoire %s"
+msgstr "impossible d'ajouter à %s"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
 msgid "The following setting(s) were disabled by dpkg-source"
-msgstr ""
+msgstr "Le(s) réglage(s) suivant(s) est(sont) désactivé(s) par dpkg-source"
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:85
 #, perl-format
 msgid ""
 "the series file (%s) contains unsupported options ('%s', line %s), dpkg-"
 "source might fail when applying patches."
-msgstr ""
+msgstr "le fichier « series » (%s) contient des options non gérées (« %s », ligne %s), dpkg-source pourrait échouer dans l'application des correctifs."
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:114
-#, fuzzy, perl-format
+#, perl-format
 msgid "can't create symlink %s"
-msgstr "impossible de lire le lien %s"
+msgstr "impossible de lire le lien symbolique %s"
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:126
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:199
 #, perl-format
 msgid "applying %s with quilt"
-msgstr ""
+msgstr "application de %s avec quilt"
 
 #: scripts/Dpkg/Substvars.pm:117
 #, perl-format
