Ack. typo fix in man/po/pl.po, add pl.add and update Polish dselect translation

--- a/dselect/po/pl.po
+++ b/dselect/po/pl.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.17\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2008-03-10 20:59+0100\n"
+"PO-Revision-Date: 2008-06-07 19:13+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -535,7 +535,6 @@ msgid "Display, part 1: package listing and status chars"
 msgstr "Wybór pakietów, część 1: lista pakietów i oznaczenie stanu"
 
 #: dselect/helpmsgs.cc:121
-#, fuzzy
 msgid ""
 "The top half of the screen shows a list of packages.  For each package you "
 "see\n"
@@ -569,25 +568,26 @@ msgid ""
 msgstr ""
 "Górna część ekranu przedstawia listę pakietów. Dla każdego pakietu "
 "wyświetlane\n"
-"są cztery kolumny oznaczające aktualny jego stan w systemie. W trybie "
-"domyślnym\n"
-"(klawisz \"v\" przełącza na tryb szczegółowy) są to cztery znaki, "
-"wymieniając od\n"
-"lewej strony:\n"
+"są cztery kolumny oznaczające aktualny jego stan w systemie i zaznaczenie.\n"
+"W trybie domyślnym (klawisz \"v\" przełącza na tryb szczegółowy) są to "
+"cztery\n"
+"znaki, wymieniając od lewej strony:\n"
 "\n"
 " Flaga błędu: Spacja - brak błędu (ale pakiet może być w nieprawidłowym "
 "stanie)\n"
 "                \"R\"  - poważny błąd podczas instalacji - konieczna "
 "reinstalacja\n"
-" Stan zainstalowania:  Spacja - nie zainstalowany\n"
-"                         \"*\"  - zainstalowany\n"
-"                         \"-\"  - nie zainstalowany, zostały pliki "
+" Stan zainstalowania: Spacja  - nie zainstalowany\n"
+"                      \"*\"     - zainstalowany\n"
+"                      \"-\"     - nie zainstalowany, zostały pliki "
 "konfiguracyjne\n"
-" tak oznaczone pakiety { \"U\"  - rozpakowany, jeszcze nie skonfigurowany\n"
-"   są w nieprawidłowym { \"C\"  - wpół-skonfigurowany (wystąpił błąd)\n"
-"                stanie { \"I\"  - wpół-zainstalowany (wystąpił błąd).\n"
+"      takie pakiety { \"U\"     - rozpakowany, jeszcze nie skonfigurowany\n"
+"   nie są (całkiem) { \"C\"     - wpół-skonfigurowany (wystąpił błąd)\n"
+"         prawidłowo { \"I\"     - wpół-zainstalowany (wystąpił błąd).\n"
+"      zainstalowane { \"W\",\"t\" - oczekiwanie na wyzwalacze lub wyzw. "
+"zaplanowane\n"
 " Poprzedni wybór: to, co zostało wybrane przed pojawieniem się tej listy;\n"
-" Znak: to, co zostało określone dla danego pakietu:\n"
+" Zaznaczenie: to, co zostało określone dla danego pakietu:\n"
 "  \"*\": zaznaczony do instalacji lub aktualizacji\n"
 "  \"-\": zaznaczony do usunięcia, pliki konfiguracyjne zostaną zachowane\n"
 "  \"=\": wstrzymany; pakiet nie będzie przetwarzany\n"
