--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+22008-06-07  Wiktor Wandachowicz  <siryes@gmail.com>
+
+        * po/pl.po: Updated to 286t0f2u.
+
 2008-05-12  Guillem Jover  <guillem@debian.org>
 
 	* dselect.pot: Regenerated.
