* scripts/po/fr.po: some wording improvements in the french translation

--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -1881,7 +1881,7 @@ msgstr "plus d'un fichier indiqué (%s et %s)"
 
 #: scripts/changelog/debian.pl:118
 msgid "fatal error occured while parsing input"
-msgstr "erreur fatale rencontrée lors de l'analyse de la saisie"
+msgstr "erreur fatale rencontrée lors de l'analyse des données"
 
 #: scripts/changelog/debian.pl:121
 #, perl-format
@@ -1941,7 +1941,7 @@ msgstr "signature PGP non terminée"
 
 #: scripts/Dpkg/Cdata.pm:115
 msgid "line with unknown format (not field-colon-value)"
-msgstr "ligne de format inconnu, format différent de « champ-virgule-valeur »"
+msgstr "ligne de format inconnu, format différent de « champ-deux points-valeur »"
 
 #: scripts/Dpkg/Changelog.pm:170 scripts/Dpkg/Changelog.pm:172
 #: scripts/Dpkg/ErrorHandling.pm:29
@@ -2867,7 +2867,7 @@ msgstr "pas de fichier orig.tar trouvé"
 msgid ""
 "patches have not been applied, applying them now (use --no-preparation to "
 "override)"
-msgstr "les rustines n'ont pas été appliquées, elles vont l'être maintenant (utilisez --no-preparation pour sauter cette étape)"
+msgstr "les correctifs n'ont pas été appliqués, ils vont l'être maintenant (utilisez --no-preparation pour sauter cette étape)"
 
 #: scripts/Dpkg/Source/Package/V2.pm:226
 #: scripts/Dpkg/Source/Package/V3/bzr.pm:97
