dpkg-query: Use VARBUF_INIT to initialize path instead of vb
Thinko introduced in eb483c17ebb9a47c8b99b4319e682ab685213090.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-09  Guillem Jover  <guillem@debian.org>
+
+	* src/query.c (searchfiles): Use VARBUF_INIT to initialize path
+	instead of vb.
+
 2008-06-04  Guillem Jover  <guillem@debian.org>
 
 	* src/main.c (setpipe): Set file descriptors to close on exec.
