dpkg-source: Add '.hgignore' to the default -i regex and -I pattern
Closes: #485365

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-06-09  Guillem Jover  <guillem@debian.org>
 
+	* scripts/Dpkg/Source/Package.pm ($diff_ignore_default_regexp): Add
+	'.hgignore'.
+	(@tar_ignore_default_pattern): Likewise.
+
+2008-06-09  Guillem Jover  <guillem@debian.org>
+
 	* src/query.c (searchfiles): Use VARBUF_INIT to initialize path
 	instead of vb.
 
