--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Replace realloc plus error checking usage with m_realloc.
   * Close --status-fd file descriptors on exec, so that they are not
     inherited by the childs. Closes: #471488
+  * Add '.hgignore' to the default dpkg-source -i regex and -I pattern.
+    Closes: #485365
 
   [ Raphael Hertzog ]
   * Enhance dpkg-shlibdeps's error message when a library can't be found to
