Updated Brazilian Portuguese translation of dpkg and dselect
	* po/pt_BR.po: Updated to 984t.
	* dselect/po/pt_BR.po: Updated to 288t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #481043
+  * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * Galician (Jacobo Tarrio). Closes: #483441
   * German (Sven Joachim).
   * Norwegian Bokmal (Hans Fredrik Nordhaug). Closes: #480626
@@ -50,6 +51,9 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Basque (Piarres Beobide). Closes: #481043
   * French (Christian Perrier).
   * Polish (Wiktor Wandachowicz).
+
+  [ Updated dselect translations ]
+  * Brazilian Portuguese (Felipe Augusto van de Wiel).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Wed, 28 May 2008 20:47:41 +0100
 
