--- a/dselect/po/pt_BR.po
+++ b/dselect/po/pt_BR.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-03-30 10:09+0300\n"
-"PO-Revision-Date: 2008-05-11 16:29-0300\n"
+"PO-Revision-Date: 2008-06-09 02:53-0300\n"
 "Last-Translator: Felipe Augusto van de Wiel <faw@debian.org>\n"
 "Language-Team: Brazilian Portuguese <debian-l10n-portuguese@lists.debian."
 "org>\n"
@@ -352,7 +352,7 @@ msgstr ""
 "  ^b                    ^f                      rola 1 caracter para o lado\n"
 "\n"
 "Marca pacotes para processamento posterior:\n"
-" +, Insere  instala ou atualiza     =, H  manter no estado atual\n"
+" +, Insere  instala ou atualiza     =, H  reter no estado atual\n"
 " -, Exclui  remove                  :, G  liberar: atualizar ou deixar "
 "desinst.\n"
 " _          remover e expurgar configuração\n"
@@ -608,7 +608,7 @@ msgstr ""
 " Marca: o que é requisitado para este pacote:\n"
 "  '*': marcado para instalação ou atualização;\n"
 "  '-': marcado para remoção, mas os arquivos de configuração permanecerão;\n"
-"  '=': mantido: pacote não será processado de forma alguma;\n"
+"  '=': retido: pacote não será processado de forma alguma;\n"
 "  '_': marcado para ser completamente expurgado - remover até a "
 "configuração;\n"
 "  'n': pacote é novo e ainda tem que ser marcado para instalação/remoção/"
@@ -1309,7 +1309,7 @@ msgstr "instalar"
 
 #: dselect/pkgdisplay.cc:40
 msgid "hold"
-msgstr "manter"
+msgstr "reter"
 
 #: dselect/pkgdisplay.cc:41
 msgid "remove"
@@ -1619,7 +1619,7 @@ msgid ""
 "opportunity to mark packages in different kinds of groups."
 msgstr ""
 "A linha que você realçou representa muitos pacotes; se você pedir para "
-"instalá-la, removê-la, mantê-la, etc, você afetará todos os pacotes que "
+"instalá-la, removê-la, retê-la, etc, você afetará todos os pacotes que "
 "combinam com o critério exibido.\n"
 "\n"
 "Se você mover o realce para uma linha de um pacote em particular você verá "
