--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-05-13 05:54+0300\n"
-"PO-Revision-Date: 2008-05-11 16:29-0300\n"
+"PO-Revision-Date: 2008-06-09 02:48-0300\n"
 "Last-Translator: Felipe Augusto van de Wiel (faw) <faw@debian.org>\n"
 "Language-Team: l10n portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2185,14 +2185,14 @@ msgstr "Processamento parou porque havia muitos erros.\n"
 #, c-format
 msgid "Package %s was on hold, processing it anyway as you request\n"
 msgstr ""
-"Pacote %s estava sendo mantido, processando-o assim mesmo como pedido\n"
+"Pacote %s estava sendo retido, processando-o assim mesmo como pedido\n"
 
 #: src/errors.c:98
 #, c-format
 msgid ""
 "Package %s is on hold, not touching it.  Use --force-hold to override.\n"
 msgstr ""
-"Pacote %s está sendo mantido, não vou tocá-lo. Use --force-hold para "
+"Pacote %s está sendo retido, não vou tocá-lo. Use --force-hold para "
 "sobrepor.\n"
 
 #: src/errors.c:107
@@ -2791,7 +2791,7 @@ msgid "invalid integer for --%s: `%.250s'"
 msgstr "inteiro inválido para --%s: '%.250s'"
 
 #: src/main.c:320
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s forcing options - control behaviour when problems found:\n"
 "  warn but continue:  --force-<thing>,<thing>,...\n"
@@ -2839,7 +2839,7 @@ msgstr ""
 "  all [!]                Define todas as opções de forçar\n"
 "  downgrade [*]          Substitui um pacote por uma versão menor\n"
 "  configure-any          Configura qualquer pacote que possa ajudar esse\n"
-"  hold                   Processa pacotes incidentais mesmo quando mantidos\n"
+"  hold                   Processa pacotes incidentais mesmo quando retidos\n"
 "  bad-path               Faltam programas importantes no PATH, chances de\n"
 "                         problemas\n"
 "  not-root               Tenta (des)instalar coisas mesmo não sendo root\n"
@@ -2862,6 +2862,7 @@ msgstr ""
 "                         questionado, a menos que uma das opções, confold\n"
 "                         ou confnew também tenham sido informadas\n"
 "  confmiss [!]           Sempre instalar arquivos de configuração faltando\n"
+"  breaks [!]             Instala mesmo que isso quebre outro pacote\n"
 "  conflicts [!]          Permite a instalação de pacotes conflitantes\n"
 "  architecture [!]       Processa até mesmo pacotes com arquitetura errada\n"
 "  overwrite-dir [!]      Sobrepõe o diretório de um pacote com arquivo de\n"
@@ -3294,10 +3295,10 @@ msgid ""
 "|/ Err?=(none)/Hold/Reinst-required/X=both-problems (Status,Err: "
 "uppercase=bad)\n"
 msgstr ""
-"Desejado=U=Desconhecido/Instalar/Remover/exPurgar/H=Manter\n"
+"Desejado=U=Desconhecido/Instalar/Remover/exPurgar/H=Reter\n"
 "| Estado=Não/Inst/arqs-Cfg/U=Descomp/Falhou-cfg/H=semi-inst/W=trig-adiado/"
 "Trig-pend\n"
-"|/ Erro?=(nenhum)/H=Mant/precisa-Reinst/X=ambos-problemas (Est,Err: "
+"|/ Erro?=(nenhum)/H=Ret/precisa-Reinst/X=ambos-problemas (Est,Err: "
 "maiúsculas=ruim)\n"
 
 #: src/query.c:129
