Updated scripts/po/* files (2 new strings).

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-06-09  Raphael Hertzog  <hertzog@debian.org>
+
+	* dpkg-dev.pot: Regenerated.
+	* *.po: Merged with dpkg-dev.pot (2 new strings).
+
 2008-06-07  Christian perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 471t
