Updating the German scripts translation for the recent changes

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-09  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 471t0f2u.
+
 2008-06-09  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 473t.
