Add missing debian/changelog entry for the polish po/pl.po update

--- a/debian/changelog
+++ b/debian/changelog
@@ -54,6 +54,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
 
   [ Updated dselect translations ]
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
+  * Polish (Wiktor Wandachowicz).
 
  -- Jacobo Tarrio <jtarrio@debian.org>  Wed, 28 May 2008 20:47:41 +0100
 
