Set PERL_DL_NONLAZY to 1 in perl scripts called by configuration scripts
* scripts/dpkg-divert.pl, scripts/update-alternatives.pl,
scripts/install-info.pl, scripts/dpkg-statoverride.pl: Set
PERL_DL_NONLAZY to 1 so that the usage of Locale::Gettext doesn't
cause run-time failures when this perl binary module is not
compiled for the corresponding perl version (and this happens in
configuration scripts, in particular preinst, during upgrades).
See http://bugs.debian.org/479711 for details.

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * The automatically created patches (in source package formats "2.0" and
     "3.0 (quilt)") will now contain "/dev/null" as previous filename when the
     patch creates a new file (instead of putting the same name).
+  * Set PERL_DL_NONLZY to 1 in perl scripts that are likely to be called in
+    package's configuration scripts to work around the perl bug #479711.
 
   [ Helge Kreutzmann ]
   * Fix a typo in dselect.1
