--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2008-06-09  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/dpkg-divert.pl, scripts/update-alternatives.pl,
+	scripts/install-info.pl, scripts/dpkg-statoverride.pl: Set
+	PERL_DL_NONLAZY to 1 so that the usage of Locale::Gettext doesn't
+	cause run-time failures when this perl binary module is not
+	compiled for the corresponding perl version (and this happens in
+	configuration scripts, in particular preinst, during upgrades).
+
 2008-06-08  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Patch.pm (analyze): Be less strict in
