French translation update

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-09  Christian perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 473t
+
 2008-06-09  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* de.po: Updated to 471t0f2u.
