libdpkg: Call va_end when done with the va_list variable from va_copy
This fixes a memory leak on systems were va_copy needs to allocate
memory.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-06-10  Guillem Jover  <guillem@debian.org>
 
+	* lib/varbuf.c (varbufvprintf): Call va_end when done with the va_list
+	variable from va_copy.
+
+2008-06-10  Guillem Jover  <guillem@debian.org>
+
 	* lib/varbuf.c (varbufprintf): Use varbufvprintf instead of
 	reimplementing it.
 
