--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,8 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Change UTF-8 '©' to '(C)' in deb-version.5 (unfuzzy translations).
   * Document --force-breaks in 'dpkg --force-help' output.
   * Document triggers --debug values in dpkg.1. Thanks to Sven Joachim.
+  * Improve package descriptions for dpkg, dpkg-dev and dselect.
+    Thanks to Justin B Rye for the review and corrections. Closes: #484002
 
   [ Raphael Hertzog ]
   * Add missing 'use File::Path' in Dpkg::Source::Package::V3::quilt.
