Adjust the test suite for the modified Dpkg::BuildOptions
* scripts/t/300_Dpkg_BuildOptions.t: Fix the test suite to work with
  the modified Dpkg::BuildOptions.
* scripts/Dpkg/BuildOptions.pm: Add missing import.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,13 +8,15 @@
 	* lib/varbuf.c (varbufprintf): Use varbufvprintf instead of
 	reimplementing it.
 
-2008-06-09  Guillem Jover  <guillem@debian.org>
+2008-06-09  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/BuildOptions.pm (parse, set): Use space as the
 	official separator in DEB_BUILD_OPTIONS. Check for validity of
 	flags and print a warning if a bad option is detected. Rewrote
 	the logic of set() to avoid adding options twice in non-overwrite
 	mode.
+	* scripts/t/300_Dpkg_BuildOptions.t: Adjust the test suite
+	accordingly.
 
 2008-06-09  Guillem Jover  <guillem@debian.org>
 
