Wiktor Wandachowicz: Update pl.add (man pages) and pl.po (dselect)

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,8 +1,12 @@
+2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
+
+        * po/pl.po: Updated to 288t.
+
 2008-06-09  Felipe Augusto van de Wiel  <faw@debian.org>
 
 	* pt_BR: Updated to 288t.
 
-22008-06-07  Wiktor Wandachowicz  <siryes@gmail.com>
+2008-06-07  Wiktor Wandachowicz  <siryes@gmail.com>
 
         * po/pl.po: Updated to 286t0f2u.
 
