--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,8 +1,12 @@
+2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
+
+        * po/pl.po: Update pl.add.
+	
 2008-06-07  Wiktor Wandachowicz  <siryes@gmail.com>
 
         * po/pl.po: Ack typo fix and add pl.add.
 	
-22008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
+2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
 
         * po/pl.po: Updated to 1601t.
 	
