Wiktor Wandachowicz: Update Polish scripts translation

--- a/scripts/po/pl.po
+++ b/scripts/po/pl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.19\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-06-09 09:08+0200\n"
-"PO-Revision-Date: 2008-06-06 01:32+0100\n"
+"PO-Revision-Date: 2008-06-10 20:52+0100\n"
 "Last-Translator: Wiktor Wandachowicz <siryes@gmail.com>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2435,24 +2435,24 @@ msgstr "oczekiwano ^--- w linii %d pliku łatki \"%s\""
 #: scripts/Dpkg/Source/Patch.pm:323
 #, perl-format
 msgid "diff `%s' patches file with name ending .dpkg-orig"
-msgstr "diff \"%s\" łata plik o nazwie kończącej się na .dpkg-orig"
+msgstr "plik łatki \"%s\" łata plik o nazwie kończącej się na .dpkg-orig"
 
 #: scripts/Dpkg/Source/Patch.pm:327
 #, perl-format
 msgid "diff `%s' finishes in middle of ---/+++ (line %d)"
-msgstr "diff \"%s\"  kończy się w środku ---/+++ (linia %d)"
+msgstr "plik łatki \"%s\"  kończy się w środku ---/+++ (linia %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:330
 #, perl-format
 msgid "line after --- isn't as expected in diff `%s' (line %d)"
-msgstr "linia po --- nie jest oczekiwana w pliku łaty \"%s\" (linia %d)"
+msgstr "linia po --- nie jest oczekiwana w pliku łatki \"%s\" (linia %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:337
-#, fuzzy, perl-format
+#, perl-format
 msgid "none of the filenames in ---/+++ are relative in diff `%s' (line %d)"
 msgstr ""
-"oryginalnym i zmodyfikowanym plikiem jest /dev/null w pliku łatki \"%s"
-"\" (linia %d)"
+"żadna z nazw plików w ---/+++ nie jest względna w pliku łatki \"%s\" (linia %"
+"d)"
 
 #: scripts/Dpkg/Source/Patch.pm:343
 #, perl-format
@@ -2462,14 +2462,15 @@ msgstr ""
 "\" (linia %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:350
-#, fuzzy, perl-format
+#, perl-format
 msgid "file removal without proper filename in diff `%s' (line %d)"
-msgstr "linia po --- nie jest oczekiwana w pliku łaty \"%s\" (linia %d)"
+msgstr ""
+"usuwanie pliku bez właściwej nazwy w pliku łatki \"%s\" (linia %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:352
 #, perl-format
 msgid "diff %s removes a non-existing file %s (line %d)"
-msgstr ""
+msgstr "plik łatki \"%s\" usuwa nieistniejący plik %s (linia %d)"
 
 #: scripts/Dpkg/Source/Patch.pm:361
 #, perl-format
@@ -2907,7 +2908,7 @@ msgstr "nie można usunąć %s"
 #: scripts/Dpkg/Source/Package/V2.pm:352
 #, perl-format
 msgid "local changes stored in %s, the modified files are:"
-msgstr ""
+msgstr "lokalne zmiany zachowane w %s, zmodyfikowane pliki to:"
 
 #: scripts/Dpkg/Source/Package/V2.pm:358
 #, perl-format
@@ -3122,9 +3123,3 @@ msgstr "pakiet źródłowy ma dwie wartości będące w konflikcie ze sobą - %s
 #, perl-format
 msgid "version number contains illegal character `%s'"
 msgstr "numer wersji zawiera niepoprawny znak \"%s\""
-
-#~ msgid "diff `%s' patches file with no subdirectory"
-#~ msgstr "diff \"%s\" łata plik, dla którego nie ma podkatalogu"
-
-#~ msgid "diff `%s' is missing trailing newline"
-#~ msgstr "plik łatki \"%s\" nie kończy się znakiem nowej linii"
