--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
+
+	* pl.po: Updated to 473t.
+
 2008-06-09  Christian perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 473t
