Add bug closure in changelog.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Improve patch parser to accept more patches that are accepted by patch
     itself.
   * Correctly skip comments in quilt series files (concerns "3.0 (quilt)" source
-    packages).
+    packages). Closes: #486323
   * The automatically created patches (in source package formats "2.0" and
     "3.0 (quilt)") will now contain "/dev/null" as previous filename when the
     patch creates a new file (instead of putting the same name).
