--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-16  Guillem Jover  <guillem@debian.org>
+
+	* lib/triglib.c (trig_file_interests_ensure): Pass the proper mask
+	to push_cleanup to make sure pop_cleanup closes the file.
+
 2008-05-15  Guillem Jover  <guillem@debian.org>
 
 	* scripts/dpkg-divert.pl (checkrename): Do not check the target file
