--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-17  Juergen Kreileder <jk@blackdown.de>,
+            Guillem Jover  <guillem@debian.org>
+
+	* scripts/dpkg-divert.pl (rename_mv): New function.
+	(dorename): Use rename_mv instead of rename.
+
 2008-06-10  Guillem Jover  <guillem@debian.org>
 
 	* lib/varbuf.c (varbufvprintf): Call va_end when done with the va_list
