--- a/debian/changelog
+++ b/debian/changelog
@@ -28,7 +28,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
     package's configuration scripts to work around the perl bug #479711.
 
   [ Helge Kreutzmann ]
-  * Fix a typo in dselect.1
+  * Fix a typo in dselect.1.
 
   [ Updated dpkg translations ]
   * Basque (Piarres Beobide). Closes: #481043
