--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,15 +1,16 @@
 2008-06-10  Wiktor Wandachowicz  <siryes@gmail.com>
 
-        * po/pl.po: Update pl.add.
-	
+	* po/pl.add: Update.
+
 2008-06-07  Wiktor Wandachowicz  <siryes@gmail.com>
 
-        * po/pl.po: Ack typo fix and add pl.add.
-	
+	* po/pl.po: Ack typo fix.
+	* po/pl.add: Add conents.
+
 2008-06-06  Wiktor Wandachowicz  <siryes@gmail.com>
 
-        * po/pl.po: Updated to 1601t.
-	
+	* po/pl.po: Updated to 1601t.
+
 2008-06-04  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1601t.
@@ -17,9 +18,9 @@
 2008-06-03  Helge Kreutzmann  <debian@helgefjell.de>
 
 	* Regenerated all po(t) files, including updating the German one.
-	* Add Sven in de.add, he translated some paragraphs as well
+	* Add Sven in de.add, he translated some paragraphs as well.
 	* Take translation fix from Frank Lichtenheld <djpig@debian.org>
-	  from the trunk
+	from the trunk.
 
 2008-05-27  Peter Karlsson  <peterk@debian.org>
 
@@ -27,8 +28,8 @@
 
 2008-05-26  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* dselect.1: Fixed a typoe and regenerated all po(t) files, including
-	  updating the German one.
+	* dselect.1: Fixed a typo and regenerated all po(t) files, including
+	updating the German one.
 
 2008-05-25  Helge Kreutzmann  <debian@helgefjell.de>
 
@@ -37,11 +38,11 @@
 
 2008-05-22  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* po/de.po: Updated to 1590t0f10u and one improvement (thanks Sven)
+	* po/de.po: Updated to 1590t0f10u and one improvement (thanks Sven).
 
 2008-05-19  Helge Kreutzmann  <debian@helgefjell.de>
 
-	* po/de.po: Updated to 1589t0f11u and more fixes (thanks Sven)
+	* po/de.po: Updated to 1589t0f11u and more fixes (thanks Sven).
 
 2008-05-18  Helge Kreutzmann  <debian@helgefjell.de>
 
