--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-dpkg (1.14.20) UNRELEASED; urgency=low
+dpkg (1.14.20) unstable; urgency=low
 
   [ Guillem Jover ]
   * Change UTF-8 '©' to '(C)' in deb-version.5 (unfuzzy translations).
@@ -64,7 +64,7 @@ dpkg (1.14.20) UNRELEASED; urgency=low
   * Brazilian Portuguese (Felipe Augusto van de Wiel).
   * Polish (Wiktor Wandachowicz).
 
- -- Jacobo Tarrio <jtarrio@debian.org>  Wed, 28 May 2008 20:47:41 +0100
+ -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 09:33:54 +0200
 
 dpkg (1.14.19) unstable; urgency=low
 
