--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-06-18  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Bump version to 1.14.21~.
+
+2008-06-18  Raphael Hertzog  <hertzog@debian.org>
+
+	* configure.ac: Release 1.14.20.
+
 2008-06-16  Guillem Jover  <guillem@debian.org>
 
 	* lib/triglib.c (trig_file_interests_ensure): Pass the proper mask
