Add bug closure in changelog.

--- a/debian/changelog
+++ b/debian/changelog
@@ -38,7 +38,7 @@ dpkg (1.15.0) UNRELEASED; urgency=low
     input with "-c-". Closes: #465340
   * Modified Dpkg::BuildOptions to recognize and use spaces as separator
     in DEB_BUILD_OPTIONS (in order to conform with the Debian policy
-    ruling estasblished in #430649).
+    ruling estasblished in #430649). Closes: #486937
 
   [ Pierre Habouzit ]
   * Add a --query option to update-alternatives. Closes: #336091, #441904
