dpkg-source/3.0 (quilt): let quilt use non-standard series file
* scripts/Dpkg/Source/Package/V3/quilt.pm: Define QUILT_SERIES
when running quilt in order to be able to use quilt series with
non-standard names (like debian.series or ubuntu.series).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-06-21  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V3/quilt.pm: Define QUILT_SERIES
+	when running quilt in order to be able to use quilt series with
+	non-standard names (like debian.series or ubuntu.series).
+
 2008-06-18  Raphael Hertzog  <hertzog@debian.org>
 
 	* configure.ac: Bump version to 1.14.21~.
