--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 dpkg (1.14.21) UNRELEASED; urgency=low
 
-  *
+  [ Raphael Hertzog ]
+  * Small fix in "3.0 (quilt)" source format when using non-standard name
+    of the quilt series.
 
  -- Raphael Hertzog <hertzog@debian.org>  Wed, 18 Jun 2008 10:19:51 +0200
 
